--- a/openatlas/templates/entity/view.html
+++ b/openatlas/templates/entity/view.html
@@ -1,40 +1,42 @@
 <div class="row">
-    <div class="col-6">
-        {% if type_check %}
-          <div class="error">
-            {{ _("Warning: Inconsistent type data, please report this.") }}
-          </div>
-        {% endif %}
-        <div class="toolbar">
-            {{ ('entity/' + entity.class_.view)|manual }}
-            {{ buttons|join(' ') }}
-            {{ entity.id|bookmark_toggle }}
-            {% if entity.class_.view == 'file' %}
-                {% if entity.image_id %}
-                    {{ entity|download_button }}
-                {% else %}
-                    <span class="error">{{ _("missing file")|uc_first }}</span>
-                {% endif %}
-            {% endif %}
-            {{ entity|siblings_pager(structure) }}
-        </div>
-        <h1>{{ entity.name }}</h1>
-        <div>
-            {% if entity.image_id %}
-                {{ entity|display_profile_image }}
-            {% endif %}
-            <div style="float:left;">
-                {{ entity.info_data|display_info }}
-            </div>
-        </div>
-        <div style="clear:both;"></div>
-        {{ entity|display_external_references }}
-        {{ entity|description }}
-    </div>
-    {% if gis_data %}
-        <div class="col-6">
-            <div id="map" class="map"></div>
-            <script src="/static/js/map/map.js"></script>
-        </div>
+  <div class="col-6">
+    {% if problematic_type_id %}
+      <div class="error">
+        {{ _('Editing is disabled because of multiple links to the single type') }}
+        "{{ g.types[problematic_type_id].name }}".
+        {{ _('Please consult the manual about link duplicates') }}: {{'admin/data_integrity_checks'|manual }}
+      </div>
     {% endif %}
+    <div class="toolbar">
+      {{ ('entity/' + entity.class_.view)|manual }}
+      {{ buttons|join(' ') }}
+      {{ entity.id|bookmark_toggle }}
+      {% if entity.class_.view == 'file' %}
+        {% if entity.image_id %}
+          {{ entity|download_button }}
+        {% else %}
+          <span class="error">{{ _("missing file")|uc_first }}</span>
+        {% endif %}
+      {% endif %}
+      {{ entity|siblings_pager(structure) }}
+    </div>
+    <h1>{{ entity.name }}</h1>
+    <div>
+      {% if entity.image_id %}
+        {{ entity|display_profile_image }}
+      {% endif %}
+      <div style="float:left;">
+        {{ entity.info_data|display_info }}
+      </div>
+    </div>
+    <div style="clear:both;"></div>
+    {{ entity|display_external_references }}
+    {{ entity|description }}
+  </div>
+  {% if gis_data %}
+    <div class="col-6">
+      <div id="map" class="map"></div>
+      <script src="/static/js/map/map.js"></script>
+    </div>
+  {% endif %}
 </div>
