#1698: provide a link instead just the name of the offending type

--- a/openatlas/templates/entity/view.html
+++ b/openatlas/templates/entity/view.html
@@ -3,7 +3,7 @@
     {% if problematic_type_id %}
       <div class="error">
         {{ _('Editing is disabled because of multiple links to the single type') }}
-        "{{ g.types[problematic_type_id].name }}".
+        {{ g.types[problematic_type_id]|link|safe }}.
         {{ _('Please consult the manual about link duplicates') }}: {{'admin/data_integrity_checks'|manual }}
       </div>
     {% endif %}
