use data-bs-toggle instead of data-toggle

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -60,7 +60,7 @@
   <button
       class="navbar-toggler"
       type="button"
-      data-toggle="collapse"
+      data-bs-toggle="collapse"
       data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup"
       aria-expanded="false"
@@ -107,7 +107,7 @@
       <div class="iconbutton dropdown">
         <a
             class="nav-link dropdown-toggle"
-            data-toggle="dropdown"
+            data-bs-toggle="dropdown"
             href="#"
             role="button"
             aria-haspopup="true"
@@ -137,7 +137,7 @@
         {% if 'contact'|display_content_translation %}
           <div
               class="iconbutton"
-              data-toggle="popover"
+              data-bs-toggle="popover"
               data-placement="bottom"
               data-content="{{ _('contact')|uc_first }}"
               data-trigger="hover">
@@ -149,7 +149,7 @@
         {% if 'legal_notice'|display_content_translation %}
           <div
               class="iconbutton"
-              data-toggle="popover"
+              data-bs-toggle="popover"
               data-placement="bottom"
               data-content="{{ _('legal_notice')|uc_first }}"
               data-trigger="hover">
