--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -7,7 +7,7 @@
                     <li class="nav-item">
                         <a
                             class="nav-link {% if loop.first %}active{% endif %}"
-                            data-toggle="tab"
+                            data-bs-toggle="tab"
                             role="tab"
                             aria-selected="{% if active %}true{% else %}false{% endif %}"
                             href="#tab-{{ tab.name|replace('_', '-') }}">
