replacing left/right with start/end

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -113,7 +113,7 @@
             aria-haspopup="true"
             style="padding: 0px!important;"
             aria-expanded="false"><span><i class="fa fa-cog"></i></span></a>
-        <div class="dropdown-menu dropdown-menu-right">
+        <div class="dropdown-menu dropdown-menu-end">
           <a class="dropdown-item" href="{{ url_for('profile_index') }}">
             <span>{{ _('profile')|uc_first }}</span>
           </a>
