replace data- with data-bs

--- a/openatlas/templates/forms/table_multi_select.html
+++ b/openatlas/templates/forms/table_multi_select.html
@@ -22,7 +22,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -32,7 +32,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     onclick="selectFromTableMulti('{{ field.id }}')">
                     {{ _('close')|uc_first }}
                 </button>
