--- a/openatlas/templates/forms/table_select.html
+++ b/openatlas/templates/forms/table_select.html
@@ -28,7 +28,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                 </button>
@@ -38,7 +38,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal">
+                    data-bs-dismiss="modal">
                         {{ _('close')|uc_first }}
                 </button>
             </div>
