--- a/openatlas/templates/forms/tree_multi_select.html
+++ b/openatlas/templates/forms/tree_multi_select.html
@@ -20,7 +20,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -37,7 +37,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     onclick="selectFromTreeMulti({{ field.id }})">
                         {{ _('close')|uc_first }}
                 </button>
