--- a/openatlas/templates/type/index.html
+++ b/openatlas/templates/type/index.html
@@ -31,7 +31,7 @@
                     class="btn btn-link collapsed"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-target="#collapse-{{ type_.id }}"
+                    data-bs-target="#collapse-{{ type_.id }}"
                     aria-expanded="true"
                     aria-controls="collapse-{{ type_.id }}">
                     {{ type_.name }}
