--- a/openatlas/templates/forms/tree_select.html
+++ b/openatlas/templates/forms/tree_select.html
@@ -31,7 +31,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal"
+                    data-bs-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -48,7 +48,7 @@
                 <button
                     type="button"
                     class="{{ config.CSS.button.primary }}"
-                    data-dismiss="modal">
+                    data-bs-dismiss="modal">
                         {{ _('close')|uc_first }}
                 </button>
             </div>
