--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -61,7 +61,7 @@
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
+      data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup"
       aria-expanded="false"
       aria-label="Toggle navigation">
@@ -176,7 +176,7 @@
     {% for category, message in messages %}
       <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
         {{ message|uc_first }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="{{ _('close')|uc_first }}">
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="{{ _('close')|uc_first }}">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
