--- a/openatlas/templates/type/index.html
+++ b/openatlas/templates/type/index.html
@@ -55,7 +55,7 @@
                           {% endif %}
                           {% if category in ['custom', 'value'] and 'manager'|is_authorized %}
                             {{ _('edit')|button(url_for('hierarchy_update', id_=type_.id)) }}
-                            {% if not type_.system and type_.count < 1 and not type_.subs %}
+                            {% if not type_.system and type_.count < 1 %}
                               {{ _('delete')|button(
                               url_for('hierarchy_delete', id_=type_.id),
                               onclick="return confirm('" + _('delete')|uc_first + " " + type_.name.replace("'", '').replace('"', '') + "?');") }}
