--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-12">
             <ul class="nav nav-tabs" role="tablist">
-                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows %}
+                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows or tab.form %}
                     <li class="nav-item">
                         <a
                             class="nav-link {% if loop.first %}active{% endif %}"
@@ -20,7 +20,7 @@
                 {% endfor %}
             </ul>
             <div class="tab-content">
-                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows %}
+                {% for tab in tabs.values() if tab.content or tab.buttons or tab.table.rows or tab.form %}
                     <div
                         class="tab-pane fade {% if loop.index == 1 %}show active{% endif %}"
                         role="tabpanel"
@@ -28,6 +28,9 @@
                             {{ tab.buttons|button_bar }}
                             {% if tab.content %}
                                 {{ tab.content|safe }}
+                            {% endif %}
+                            {% if tab.form %}
+                              {{ tab.form|display_form }}
                             {% endif %}
                             {% if tab.table.rows %}
                                 {{ tab.table.display(tab.name) }}
