fix navbar padding

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -55,6 +55,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
   <a class="navbar-brand" href="/"><img src="{{ get_logo|safe }}" id="logo" alt="Logo"></a>
   <button
       class="navbar-toggler"
@@ -160,6 +161,7 @@
       <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
     {% endif %}
   </div>
+</div>
 </nav>
 <nav aria-label="breadcrumb">
   <div class="breadcrumb">
