--- a/openatlas/templates/model/cidoc_class_view.html
+++ b/openatlas/templates/model/cidoc_class_view.html
@@ -1,38 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
-<div style="float:left;" class="col-sm-1">
-  <p>
-    <strong>{{ _('info')|uc_first }}</strong>
-  </p>
-  {{ info|display_info }}
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <p><strong>{{ _('info')|uc_first }}</strong></p>
+      {{ info|display_info }}
+      <p><strong>{{ _('description')|uc_first|safe }}</strong></p>
+      <p>{{ class_.comment }}</p>
+    </div>
+    {% if tables.super.rows %}
+      <div class="col">
+        <p><strong>{{ _('super')|uc_first }}</strong></p>
+        {{ tables.super.display('super')|safe }}
+      </div>
+    {% endif %}
+    {% if tables.sub.rows %}
+      <div class="col">
+        <p><strong>{{ _('subs')|uc_first }}</strong></p>
+        {{ tables.sub.display('sub')|safe }}
+      </div>
+    {% endif %}
+    {% if tables.domains.rows %}
+      <div class="col">
+        <p><strong>{{ _('domain for')|uc_first }}</strong></p>
+        {{ tables.domains.display('domains')|safe }}
+      </div>
+    {% endif %}
+    {% if tables.ranges.rows %}
+      <div class="col">
+        <p><strong>{{ _('range for')|uc_first }}</strong></p>
+        {{ tables.ranges.display('ranges')|safe }}
+      </div>
+    {% endif %}
+  </div>
 </div>
-{% if tables.super.rows %}
-  <div style="float:left;" class="col-sm-2">
-    <p><strong>{{ _('super')|uc_first }}</strong></p>
-    {{ tables.super.display('super')|safe }}
-  </div>
-{% endif %}
-{% if tables.sub.rows %}
-  <div style="float:left;" class="col-sm-2">
-    <p><strong>{{ _('subs')|uc_first }}</strong></p>
-    {{ tables.sub.display('sub')|safe }}
-  </div>
-{% endif %}
-{% if tables.domains.rows %}
-  <div style="float:left;" class="col-sm-2">
-    <p><strong>{{ _('domain for')|uc_first }}</strong></p>
-    {{ tables.domains.display('domains')|safe }}
-  </div>
-{% endif %}
-{% if tables.ranges.rows %}
-  <div style="float:left;" class="col-sm-2">
-    <p><strong>{{ _('range for')|uc_first }}</strong></p>
-    {{ tables.ranges.display('ranges')|safe }}
-  </div>
-{% endif %}
-  <div style="clear:both"></div>
-  <div class="description">
-    <strong>{{ _('description')|uc_first|safe }}</strong>
-    <p>{{ class_.comment }}</p>
-  </div>
 {% endblock %}
