--- a/openatlas/templates/util/dates.html
+++ b/openatlas/templates/util/dates.html
@@ -12,6 +12,9 @@
         {{ form.begin_year_from(class_='year')   }} {{ errors['begin_year_from']|safe }}
         {{ form.begin_month_from(class_='month') }} {{ errors['begin_month_from']|safe }}
         {{ form.begin_day_from(class_='day')     }} {{ errors['begin_day_from']|safe }}
+        {{ form.begin_hour_from(class_='hour')     }} {{ errors['begin_hour_from']|safe }}
+        {{ form.begin_minute_from(class_='minute')     }} {{ errors['begin_minute_from']|safe }}
+        {{ form.begin_second_from(class_='second')     }} {{ errors['begin_second_from']|safe }}
         {{ form.begin_comment }}
     </div>
 </div>
@@ -21,6 +24,9 @@
         {{ form.begin_year_to(class_='year')   }} {{ errors['begin_year_to']|safe }}
         {{ form.begin_month_to(class_='month') }} {{ errors['begin_month_to']|safe }}
         {{ form.begin_day_to(class_='day')     }} {{ errors['begin_day_to']|safe }}
+        {{ form.begin_hour_to(class_='hour')     }} {{ errors['begin_hour_to']|safe }}
+        {{ form.begin_minute_to(class_='minute')     }} {{ errors['begin_minute_to']|safe }}
+        {{ form.begin_second_to(class_='second')     }} {{ errors['begin_second_to']|safe }}
     </div>
 </div>
 <div class="table-row date-switch" style="{{ style }}">
@@ -29,6 +35,9 @@
         {{ form.end_year_from(class_='year')   }} {{ errors['end_year_from']|safe }}
         {{ form.end_month_from(class_='month') }} {{ errors['end_month_from']|safe }}
         {{ form.end_day_from(class_='day')     }} {{ errors['end_day_from']|safe }}
+        {{ form.end_hour_from(class_='hour')     }} {{ errors['end_hour_from']|safe }}
+        {{ form.end_minute_from(class_='minute')     }} {{ errors['end_minute_from']|safe }}
+        {{ form.end_second_from(class_='second')     }} {{ errors['end_second_from']|safe }}
         {{ form.end_comment }}
     </div>
 </div>
@@ -37,5 +46,8 @@
         {{ form.end_year_to(class_='year')   }} {{ errors['end_year_to']|safe }}
         {{ form.end_month_to(class_='month') }} {{ errors['end_month_to']|safe }}
         {{ form.end_day_to(class_='day')     }} {{ errors['end_day_to']|safe }}
+        {{ form.end_hour_to(class_='hour')     }} {{ errors['end_hour_to']|safe }}
+        {{ form.end_minute_to(class_='minute')     }} {{ errors['end_minute_to']|safe }}
+        {{ form.end_second_to(class_='second')     }} {{ errors['end_second_to']|safe }}
     </div>
 </div>
