--- a/openatlas/templates/util/dates.html
+++ b/openatlas/templates/util/dates.html
@@ -6,15 +6,18 @@
         {{ label|button(id_='date-switcher', css='secondary') }}
     </div>
 </div>
+
 <div class="table-row date-switch" style="{{ style }}">
     <div>{{ _('begin')|uc_first }}</div>
     <div class="table-cell">
         {{ form.begin_year_from(class_='year')   }} {{ errors['begin_year_from']|safe }}
         {{ form.begin_month_from(class_='month') }} {{ errors['begin_month_from']|safe }}
         {{ form.begin_day_from(class_='day')     }} {{ errors['begin_day_from']|safe }}
-        {{ form.begin_hour_from(class_='hour')     }} {{ errors['begin_hour_from']|safe }}
-        {{ form.begin_minute_from(class_='minute')     }} {{ errors['begin_minute_from']|safe }}
-        {{ form.begin_second_from(class_='second')     }} {{ errors['begin_second_from']|safe }}
+        {% if 'begin_hour_from' in form %}
+          {{ form.begin_hour_from(class_='hour' )     }} {{ errors['begin_hour_from']|safe }}
+          {{ form.begin_minute_from(class_='minute')     }} {{ errors['begin_minute_from']|safe }}
+          {{ form.begin_second_from(class_='second ')     }} {{ errors['begin_second_from']|safe }}
+        {% endif %}
         {{ form.begin_comment }}
     </div>
 </div>
@@ -24,9 +27,11 @@
         {{ form.begin_year_to(class_='year')   }} {{ errors['begin_year_to']|safe }}
         {{ form.begin_month_to(class_='month') }} {{ errors['begin_month_to']|safe }}
         {{ form.begin_day_to(class_='day')     }} {{ errors['begin_day_to']|safe }}
-        {{ form.begin_hour_to(class_='hour')     }} {{ errors['begin_hour_to']|safe }}
-        {{ form.begin_minute_to(class_='minute')     }} {{ errors['begin_minute_to']|safe }}
-        {{ form.begin_second_to(class_='second')     }} {{ errors['begin_second_to']|safe }}
+        {% if 'begin_hour_from' in form %}
+          {{ form.begin_hour_to(class_='hour')     }} {{ errors['begin_hour_to']|safe }}
+          {{ form.begin_minute_to(class_='minute')     }} {{ errors['begin_minute_to']|safe }}
+          {{ form.begin_second_to(class_='second')     }} {{ errors['begin_second_to']|safe }}
+        {% endif %}
     </div>
 </div>
 <div class="table-row date-switch" style="{{ style }}">
@@ -35,9 +40,11 @@
         {{ form.end_year_from(class_='year')   }} {{ errors['end_year_from']|safe }}
         {{ form.end_month_from(class_='month') }} {{ errors['end_month_from']|safe }}
         {{ form.end_day_from(class_='day')     }} {{ errors['end_day_from']|safe }}
-        {{ form.end_hour_from(class_='hour')     }} {{ errors['end_hour_from']|safe }}
-        {{ form.end_minute_from(class_='minute')     }} {{ errors['end_minute_from']|safe }}
-        {{ form.end_second_from(class_='second')     }} {{ errors['end_second_from']|safe }}
+        {% if 'begin_hour_from' in form %}
+          {{ form.end_hour_from(class_='hour')     }} {{ errors['end_hour_from']|safe }}
+          {{ form.end_minute_from(class_='minute')     }} {{ errors['end_minute_from']|safe }}
+          {{ form.end_second_from(class_='second')     }} {{ errors['end_second_from']|safe }}
+        {% endif %}
         {{ form.end_comment }}
     </div>
 </div>
@@ -46,8 +53,10 @@
         {{ form.end_year_to(class_='year')   }} {{ errors['end_year_to']|safe }}
         {{ form.end_month_to(class_='month') }} {{ errors['end_month_to']|safe }}
         {{ form.end_day_to(class_='day')     }} {{ errors['end_day_to']|safe }}
-        {{ form.end_hour_to(class_='hour')     }} {{ errors['end_hour_to']|safe }}
-        {{ form.end_minute_to(class_='minute')     }} {{ errors['end_minute_to']|safe }}
-        {{ form.end_second_to(class_='second')     }} {{ errors['end_second_to']|safe }}
+        {% if 'begin_hour_from' in form %}
+          {{ form.end_hour_to(class_='hour')     }} {{ errors['end_hour_to']|safe }}
+          {{ form.end_minute_to(class_='minute')     }} {{ errors['end_minute_to']|safe }}
+          {{ form.end_second_to(class_='second')     }} {{ errors['end_second_to']|safe }}
+        {% endif %}
     </div>
 </div>
